--- a/app/templates/index_2.html
+++ b/app/templates/index_2.html
@@ -407,7 +407,7 @@
 	<div class="row">
 		<div class="col-md-1"></div>
 		<div class="col-md-10">
-			<form action="{{ url_for('nn. ') }}" method="post" enctype="multipart/form-data">
+			<form action="{{ url_for('nn.forward_2') }}" method="post" enctype="multipart/form-data">
 				<div class="form-group">
 					<div class="slider-container">
 						<div class="container">	
