fixed dataset error

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -29,7 +29,7 @@
                     <li><span class="inner"><i class="fa fa-home fa-lg"></i><a href="{{ url_for('home') }}">Home</a></span></li>
                     <li><span class="inner"><i class="fa fa-exclamation-circle fa-lg"></i><a href="{{ url_for('tutorial') }}">Tutorial</a></span></li>
                     <li><span class="inner"><i class="fa fa-info-circle fa-lg"></i><a href="{{ url_for('information') }}">More Information</a></span></li>
-                    <li><span class="inner"><i class="fa fa-copy"></i><a href="{{ url_for('download_weights') }}">Example Datasets</a></span></li>
+                    <li><span class="inner"><i class="fa fa-copy"></i><a href="{{ url_for('datasets') }}">Example Datasets</a></span></li>
                      <li><span class="inner"><i class="fa fa-camera"></i><a href="{{ url_for('udrop') }}">&mu;Drop Image Processing Tool</a></span></li>
                     <!--<li><span class="inner"><i class="fa fa-info-circle fa-lg"></i><a href="{{ url_for('droplet_based') }}">Droplet-Based Microfluidics</a></span></li>
                     <li><span class="inner"><i class="fa fa-info-circle fa-lg"></i><a href="{{ url_for('single_cell') }}">Single-Cell Encapsulation</a></span></li>-->
