--- a/app/templates/result.html
+++ b/app/templates/result.html
@@ -3,7 +3,7 @@
 {%  block content %}
 <!-- page content -->
 <div class="container content-container">
-    <form action="{{ url_for('nn.download_weights') }}" method='post'>
+    <form action="{{ url_for('nn.datasets') }}" method='post'>
         <div class="row">
             <div class="col-md-12 col-sm-12">
                 <h3>Results</h3>
