--- a/app/templates/index_3.html
+++ b/app/templates/index_3.html
@@ -127,7 +127,7 @@
 									<b>Enabled?</b>
 								</div>
 							</div>
-							<!--2nd row-->
+							<!--1st row-->
 							<div class="row slider-one-col">
 								<!--1st column-->
 								<div class="col-md-1 text-center">
@@ -146,7 +146,7 @@
 									<div class="tt_container"><i class="fa fa-question-circle fa-lg"></i><span class="tt_info">If you have a design constraint you can pick an orifice width between 75 &mu;m and 175 &mu;m.</span></div>
 								</div>
 							</div>
-							<!--3rd row-->
+							<!--2nd row-->
 							<div class="row slider-one-col">
 								<!--1st column-->
 								<div class="col-md-1 text-center">
@@ -165,7 +165,7 @@
 									<div class="tt_container"><i class="fa fa-question-circle fa-lg"></i><span class="tt_info">Channel depth normalized to the orifice width.</span></div>
 								</div>
 							</div>
-							<!--4th row-->
+							<!--3rd row-->
 							<div class="row slider-one-col">
 								<!--1st column-->
 								<div class="col-md-1 text-center">
@@ -184,27 +184,7 @@
 									<div class="tt_container"><i class="fa fa-question-circle fa-lg"></i><span class="tt_info">Outlet channel width normalized to the orifice width.</span></div>
 								</div>
 							</div>
-							<!--5th row-->
-							<div class="row slider-one-col">
-								<!--1st column-->
-								<div class="col-md-1 text-center">
-									<input type="checkbox" id="normOriCheck" onclick="disableSlider(this.id, 'normOriRange', 'normOri');">
-								</div>
-								<div class="col-md-4 text-left">
-									<p class="field-tip">Normalized orifice length<!--<span class="tip-content">unit in &#181;m</span>--></p>
-								</div>
-								<div class="col-md-5 text-left">
-									<input type="range" min="100" max="300" value="100" class="slider" id="normOriRange" oninput="updateFloatInput(this.value, 'normOri', this.id);" disabled>
-								</div>
-								<div class="col-md-1 text-left">
-									<input size="4" type="text" id="normOri" name="normOri" value="1" disabled oninput="updateFloatSlider('normOriRange', this.id)" onchange="floatSliderChange('normOriRange', this.id, 100, 300)">
-								</div>
-								<div class="col-md-1 text-center">
-									<div class="tt_container"><i class="fa fa-question-circle fa-lg"></i><span class="tt_info">Orifice length normalized to the orifice width.</span></div>
-								</div>
-							</div>
-
-							<!--2nd row-->
+							<!--4th row-->
 							<div class="row slider-one-col">
 								<!--2nd column-->
 								<div class="col-md-1 text-center">
@@ -223,7 +203,7 @@
 									<div class="tt_container"><i class="fa fa-question-circle fa-lg"></i><span class="tt_info">Water inlet width normalized to the orifice width.</span></div>
 								</div>
 							</div>
-							<!--3rd row-->
+							<!--5th row-->
 							<div class="row slider-one-col">
 								<!--2nd column-->
 								<div class="col-md-1 text-center">
@@ -242,93 +222,99 @@
 									<div class="tt_container"><i class="fa fa-question-circle fa-lg"></i><span class="tt_info">Oil inlet width normalized to the orifice width.</span></div>
 								</div>
 							</div>
-							<!--4th row-->
-							<div class="row slider-one-col">
-								<!--2nd column-->
-								<div class="col-md-1 text-center">
-									<input type="checkbox" id="flowRatioCheck" onclick="disableSlider(this.id, 'flowRatioRange', 'flowRatio');">
-								</div>
-								<div class="col-md-4 text-left">
-									<p class="field-tip">Flow rate ratio<!--<span class="tip-content">Channel depth divided by orifice width</span>--></p>
-								</div>
-								<div class="col-md-5 text-left">
-									<input type="range" min="200" max="2200" value="200" class="slider" id="flowRatioRange" oninput="updateFloatInput(this.value, 'flowRatio', this.id);" disabled>
-								</div>
-								<div class="col-md-1 text-left">
-									<input size="4" type="text" id="flowRatio" name="flowRatio" value="2" disabled oninput="updateFloatSlider('flowRatioRange', this.id)" onchange="floatSliderChange('flowRatioRange', this.id, 200, 2200)">
-								</div>
-								<div class="col-md-1 text-center">
-									<div class="tt_container"><i class="fa fa-question-circle fa-lg"></i><span class="tt_info">Oil flow rate divided by water flow rate.</span></div>
-								</div>
-							</div>
-							<!--5th row-->
-							<div class="row slider-one-col">
-								<!--2nd column-->
-								<div class="col-md-1 text-center">
-									<input type="checkbox" id="capNumCheck" onclick="disableSlider(this.id, 'capNumRange', 'capNum');">
-								</div>
-								<div class="col-md-4 text-left">
-									<p class="field-tip">Capillary number<!--<span class="tip-content">Channel depth divided by orifice width</span>--></p>
-								</div>
-								<div class="col-md-5 text-left">
-									<input type="range" min="3" max="106" value="3" class="slider" id="capNumRange" oninput="updateFloatInput(this.value, 'capNum', this.id);" disabled>
-								</div>
-								<div class="col-md-1 text-left">
-									<input size="4" type="text" id="capNum" name="capNum" value="0.03" disabled oninput="updateFloatSlider('capNumRange', this.id)" onchange="floatSliderChange('capNumRange', this.id, 3, 106)">
-								</div>
-								<div class="col-md-1 text-center">
-									<div class="tt_container"><i class="fa fa-question-circle fa-lg"></i><span class="tt_info">Capillary number is the ratio of viscous forces and the interfacial tension.</span></div>
-								</div>
-							</div>
 							<!--6th row-->
 							<div class="row slider-one-col">
 								<!--2nd column-->
 								<div class="col-md-1 text-center">
-									<input type="checkbox" id="regimeCheck" onclick="disableCombo(this.id, 'regimeCombo');">
+									<input type="checkbox" id="dispFlowCheck" onclick="disableSlider(this.id, 'dispFlowRange', 'dispFlow');">
 								</div>
 								<div class="col-md-4 text-left">
-									<p class="field-tip">Regime<!--<span class="tip-content">Channel depth divided by orifice width</span>--></p>
+									<p class="field-tip">Dispersed Flow Rate<!--<span class="tip-content">Channel depth divided by orifice width</span>--></p>
 								</div>
 								<div class="col-md-5 text-left">
-									<select class="cmbox" name="regime" id="regimeCombo" disabled>
-										<option value="1" selected>Dripping</option>
-										<option value="2">Jetting</option>
-									</select>
+									<input type="range" min="200" max="400" value="200" class="slider" id="dispFlowRange" oninput="updateFloatInput(this.value, 'dispFlow', this.id);" disabled>
 								</div>
-								<div class="col-md-1 text-center"></div>
-								<div class="col-md-1 text-center">
-									<div class="tt_container"><i class="fa fa-question-circle fa-lg"></i><span class="tt_info">If you have a design constraint on regime, you can pick between dripping or jetting regime.</span></div>
-								</div>
-							</div>
-
-                            <div class="row">
-								<div class="col-md-12">
-									<h6 class="subtitle-spacer">.: Tolerance Test :.</h6>
-								</div>
-							</div>
-
-							<div class="row content-spacer">
-								<!--1st column-->
 								<div class="col-md-1 text-left">
-									<b>Enabled?</b>
+									<input size="4" type="text" id="dispFlow" name="dispFlow" value="2" disabled oninput="updateFloatSlider('dispFlowRange', this.id)" onchange="floatSliderChange('dispFlowRange', this.id, 200, 400)">
+								</div>
+								<div class="col-md-1 text-center">
+									<div class="tt_container"><i class="fa fa-question-circle fa-lg"></i><span class="tt_info">Dispersed flow rate.</span></div>
 								</div>
 							</div>
+							<!--7th row-->
 							<div class="row slider-one-col">
-								<!--second column-->
+								<!--2nd column-->
 								<div class="col-md-1 text-center">
-									<input type="checkbox" id="toleranceCheck" onclick="disableSlider(this.id, 'toleranceRange', 'tolerance');">
+									<input type="checkbox" id="dispViscCheck" onclick="disableSlider(this.id, 'dispViscRange', 'dispVisc');">
 								</div>
 								<div class="col-md-4 text-left">
-									<p class="field-tip">Tolerance (%)<!--<span class="tip-content">unit in &#181;m</span>--></p>
+									<p class="field-tip">Dispersed phase dynamic viscosity<!--<span class="tip-content">Channel depth divided by orifice width</span>--></p>
 								</div>
 								<div class="col-md-5 text-left">
-									<input type="range" min="1" max="99" value="10" class="slider" id="toleranceRange" oninput="updateIntInput(this.value, 'tolerance', this.id);" disabled>
+									<input type="range" min="200" max="400" value="200" class="slider" id="dispViscRange" oninput="updateFloatInput(this.value, 'dispVisc', this.id);" disabled>
 								</div>
 								<div class="col-md-1 text-left">
-									<input size="4" type="text" id="tolerance" name="tolerance" value="10" disabled oninput="updateIntSlider('toleranceRange', this.id)" onchange="intSliderChange('toleranceRange', this.id, 1, 99)">
-                                </div>
+									<input size="4" type="text" id="dispVisc" name="dispVisc" value="2" disabled oninput="updateFloatSlider('dispViscRange', this.id)" onchange="floatSliderChange('dispViscRange', this.id, 200, 400)">
+								</div>
 								<div class="col-md-1 text-center">
-									<div class="tt_container"><i class="fa fa-question-circle fa-lg"></i><span class="tt_info">Pick a desired tolerance between 1% and 99%.</span></div>
+									<div class="tt_container"><i class="fa fa-question-circle fa-lg"></i><span class="tt_info">Dispersed phase dynamic viscosity.</span></div>
+								</div>
+							</div>
+							<!--8th row-->
+							<div class="row slider-one-col">
+								<!--2nd column-->
+								<div class="col-md-1 text-center">
+									<input type="checkbox" id="contFlowCheck" onclick="disableSlider(this.id, 'contFlowRange', 'contFlow');">
+								</div>
+								<div class="col-md-4 text-left">
+									<p class="field-tip">Continuous Flow Rate<!--<span class="tip-content">Channel depth divided by orifice width</span>--></p>
+								</div>
+								<div class="col-md-5 text-left">
+									<input type="range" min="200" max="400" value="200" class="slider" id="contFlowRange" oninput="updateFloatInput(this.value, 'contFlow', this.id);" disabled>
+								</div>
+								<div class="col-md-1 text-left">
+									<input size="4" type="text" id="contFlow" name="contFlow" value="2" disabled oninput="updateFloatSlider('contFlowRange', this.id)" onchange="floatSliderChange('contFlowRange', this.id, 200, 400)">
+								</div>
+								<div class="col-md-1 text-center">
+									<div class="tt_container"><i class="fa fa-question-circle fa-lg"></i><span class="tt_info">Continuous flow rate.</span></div>
+								</div>
+							</div>
+							<!--9th row-->
+							<div class="row slider-one-col">
+								<!--2nd column-->
+								<div class="col-md-1 text-center">
+									<input type="checkbox" id="contViscCheck" onclick="disableSlider(this.id, 'contViscRange', 'contVisc');">
+								</div>
+								<div class="col-md-4 text-left">
+									<p class="field-tip">Continuous phase dynamic viscosity<!--<span class="tip-content">Channel depth divided by orifice width</span>--></p>
+								</div>
+								<div class="col-md-5 text-left">
+									<input type="range" min="200" max="400" value="200" class="slider" id="contViscRange" oninput="updateFloatInput(this.value, 'contVisc', this.id);" disabled>
+								</div>
+								<div class="col-md-1 text-left">
+									<input size="4" type="text" id="contVisc" name="contVisc" value="2" disabled oninput="updateFloatSlider('contViscRange', this.id)" onchange="floatSliderChange('contViscRange', this.id, 200, 400)">
+								</div>
+								<div class="col-md-1 text-center">
+									<div class="tt_container"><i class="fa fa-question-circle fa-lg"></i><span class="tt_info">Continuous phase dynamic viscosity.</span></div>
+								</div>
+							</div>
+							<!--10th row-->
+							<div class="row slider-one-col">
+								<!--2nd column-->
+								<div class="col-md-1 text-center">
+									<input type="checkbox" id="surfTensionCheck" onclick="disableSlider(this.id, 'surfTensionRange', 'surfTension');">
+								</div>
+								<div class="col-md-4 text-left">
+									<p class="field-tip">Interfacial Surface Tension<!--<span class="tip-content">Channel depth divided by orifice width</span>--></p>
+								</div>
+								<div class="col-md-5 text-left">
+									<input type="range" min="200" max="400" value="200" class="slider" id="surfTensionRange" oninput="updateFloatInput(this.value, 'surfTension', this.id);" disabled>
+								</div>
+								<div class="col-md-1 text-left">
+									<input size="4" type="text" id="surfTension" name="surfTension" value="2" disabled oninput="updateFloatSlider('surfTensionRange', this.id)" onchange="floatSliderChange('surfTensionRange', this.id, 200, 400)">
+								</div>
+								<div class="col-md-1 text-center">
+									<div class="tt_container"><i class="fa fa-question-circle fa-lg"></i><span class="tt_info">Interfacial surface tension between the continuous and dispersed phases.</span></div>
 								</div>
 							</div>
 
