--- a/app/templates/index_3.html
+++ b/app/templates/index_3.html
@@ -36,10 +36,9 @@
 				</div>
 			</div>-->
 			<div class="row md-spacer">
-				<div class="col-md-3"><div class="btn-1" onclick="window.location.href='#designAutomation'">Design Automation</div></div>
-				<div class="col-md-3"><div class="btn-2" onclick="window.location.href='#performancePrediction'">Performance Prediction</div></div>
-				<div class="col-md-3"><div class="btn-3" onclick="window.location.href='{{ nn_server }}'">Training NNs from Scratch</div></div>
-				<div class="col-md-3"><div class="btn-4" onclick="window.location.href='{{ tl_server }}'">Training NNs with Transfer Learning</div></div>
+				<div class="col-md-4"><div class="btn-1" onclick="window.location.href='#designAutomation'">Design Automation of Single Emulsions</div></div>
+                <div class="col-md-4"><div class="btn-2" onclick="window.location.href='#designAutomationDE'">Design Automation of Double Emulsions</div></div>
+				<div class="col-md-4"><div class="btn-3" onclick="window.location.href='#performancePrediction'">Performance Prediction</div></div>
 			</div>
 		</div>
 		<div class="col-md-2"></div>
@@ -132,7 +131,7 @@
 									<input type="range" min="1.4" max="939" value="1.4" class="slider-activated" id="dispViscRange" oninput="updateFloatInput(this.value, 'dispVisc', this.id);">
 								</div>
 								<div class="col-md-1 text-left">
-									<input size="4" type="text" id="dispVisc" name="dispVisc" value="0.014" oninput="updateFloatSlider('dispViscRange', this.id)" onchange="floatSliderChange('dispViscRange2', this.id, 1.4, 939)">
+									<input size="4" type="text" id="dispVisc" name="dispVisc" value="0.014" oninput="updateFloatSlider('dispViscRange', this.id)" onchange="floatSliderChange('dispViscRange', this.id, 1.4, 939)">
 								</div>
 								<div class="col-md-1 text-center">
 									<div class="tt_container"><i class="fa fa-question-circle fa-lg"></i><span class="tt_info">Dynamic viscosity of the disperse phase (droplet content) in Pa s.</span></div>
@@ -166,7 +165,7 @@
 									<input type="range" min="100" max="300" value="100" class="slider-activated" id="surfTensionRange" oninput="updateFloatInput(this.value, 'surfTension', this.id);">
 								</div>
 								<div class="col-md-1 text-left">
-									<input size="4" type="text" id="surfTension" name="surfTension" value="1" oninput="updateFloatSlider('surfTensionRange', this.id)" onchange="floatSliderChange('surfTensionRange2', this.id, 100, 300)"> <!--TODO: add in range-->
+									<input size="4" type="text" id="surfTension" name="surfTension" value="1" oninput="updateFloatSlider('surfTensionRange', this.id)" onchange="floatSliderChange('surfTensionRange', this.id, 100, 300)"> <!--TODO: add in range-->
 								</div>
 								<div class="col-md-1 text-center">
 									<div class="tt_container"><i class="fa fa-question-circle fa-lg"></i><span class="tt_info">Interfacial surface tension betweeen the continuous and dispersed phases in mN/m.</span></div>
@@ -315,6 +314,178 @@
 								</div>
 								<div class="col-md-1 text-center">
 									<div class="tt_container"><i class="fa fa-question-circle fa-lg"></i><span class="tt_info">Continuous flow rate.</span></div>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-md-12">
+									<input type="submit" class="btn-section-2" value="Generate Design" onclick="validityBackward()"/>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</form>
+		</div>
+		<div class="col-md-1"></div>
+	</div>
+</div>
+<div class="section fp-auto-height-responsive" id="section-2-DE">
+	<div class="row">
+		<div class="col-md-1"></div>
+		<div class="col-md-10">
+			<form action="{{ url_for('nn.backward_3DE') }}" method="post" enctype="multipart/form-data">
+				<div class="form-group">
+					<div class="slider-container">
+						<div class="container">
+							<h5 class="title-spacer">Design Automation of Double Emulsion Droplet Generators</h5>
+							<div class="row">
+								<div class="col-md-12">
+									<h6 class="subtitle-spacer">.: Desired Performance :.</h6>
+								</div>
+							</div>
+							<!--1st row-->
+							<div class="row slider-one-col">
+								<!--second column-->
+								<div class="col-md-5 text-left">
+									<p class="field-tip">Inner droplet diameter (&mu;m)<!--<span class="tip-content">unit in &#181;m</span>--></p>
+								</div>
+								<div class="col-md-5 text-left">
+									<input type="range" min="25" max="250" value="25" class="slider-activated" id="innerDropSizeRange" oninput="updateIntInput(this.value, 'innerDropSize', this.id);">
+								</div>
+								<div class="col-md-1 text-left">
+									<input size="4" type="text" id="innerDropSize" name="innerDropSize" value="25" oninput="updateIntSlider('innerDropSizeRange', this.id)" onchange="intSliderChange('innerDropSizeRange', this.id, 25, 250)">
+								</div>
+								<div class="col-md-1 text-center">
+									<div class="tt_container"><i class="fa fa-question-circle fa-lg"></i><span class="tt_info">Pick a desired inner droplet size.</span></div>
+								</div>
+							</div>
+							<div class="row slider-one-col">
+								<!--first column-->
+								<div class="col-md-5 text-left">
+									<p class="field-tip">Outer (total) double emulsion size (&mu;m)<!--<span class="tip-content">unit in Hz</span>--></p>
+								</div>
+								<div class="col-md-5 text-left">
+									<input type="range" min="5" max="500" value="5" class="slider-activated" id="outerDropSizeRange" oninput="updateIntInput(this.value, 'outerDropSize', this.id);">
+								</div>
+								<div class="col-md-1 text-left">
+									<input size="4" type="text" id="outerDropSize" name="outerDropSize" value="5" oninput="updateIntSlider('outerDropSizeRange', this.id)" onchange="intSliderChange('outerDropSizeRange', this.id, 5, 500)">
+								</div>
+								<div class="col-md-1 text-center">
+									<div class="tt_container"><i class="fa fa-question-circle fa-lg"></i><span class="tt_info">Pick a desired outer (total) droplet size.</span></div>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-md-12">
+									<h6 class="subtitle-spacer">.: Fluid Properties :.</h6>
+								</div>
+							</div>
+							<!--7th row TODO: UPDATE ranges to be correct with dataset -->
+							<div class="row slider-row">
+								<!--2nd column-->
+								<div class="col-md-5 text-left">
+									<p class="field-tip">Inner aqueous phase dynamic viscosity (mPa s)<!--<span class="tip-content">Channel depth divided by orifice width</span>--></p>
+								</div>
+								<div class="col-md-5 text-left">
+									<input type="range" min="1.4" max="939" value="1.4" class="slider-activated" id="innerAqViscRange" oninput="updateFloatInput(this.value, 'innerAqVisc', this.id);">
+								</div>
+								<div class="col-md-1 text-left">
+									<input size="4" type="text" id="innerAqVisc" name="innerAqVisc" value="0.014" oninput="updateFloatSlider('innerAqViscRange', this.id)" onchange="floatSliderChange('innerAqViscRange', this.id, 1.4, 939)">
+								</div>
+								<div class="col-md-1 text-center">
+									<div class="tt_container"><i class="fa fa-question-circle fa-lg"></i><span class="tt_info">Dynamic viscosity of the inner dispersed phase (droplet content) in Pa s.</span></div>
+								</div>
+							</div>
+                            <!--9th row-->
+							<div class="row slider-row">
+								<!--1st column-->
+								<div class="col-md-5 text-left">
+									<p class="field-tip">Oil phase dynamic viscosity (mPa s)<!--<span class="tip-content">unit in &#181;m</span>--></p>
+								</div>
+								<div class="col-md-5 text-left">
+									<input type="range" min="100" max="300" value="100" class="slider-activated" id="oilViscRange" oninput="updateFloatInput(this.value, 'oilVisc', this.id);">
+								</div>
+								<div class="col-md-1 text-left">
+									<input size="4" type="text" id="oilVisc" name="oilVisc" value="1" oninput="updateFloatSlider('oilViscRange', this.id)" onchange="floatSliderChange('oilViscRange', this.id, 100, 300)"> <!--TODO: add in range-->
+								</div>
+								<div class="col-md-1 text-center">
+									<div class="tt_container"><i class="fa fa-question-circle fa-lg"></i><span class="tt_info">Dynamic viscosity of the oil phase (shell fluid) in Pa s.</span></div>
+								</div>
+							</div>
+                            <!--10th row-->
+							<div class="row slider-row">
+								<!--1st column-->
+								<div class="col-md-5 text-left">
+									<p class="field-tip">Inner aqueous / oil interfacial surface tension (mN/m) <!--<span class="tip-content">unit in &#181;m</span>--></p>
+								</div>
+								<div class="col-md-5 text-left">
+									<input type="range" min="100" max="300" value="100" class="slider-activated" id="innerSurfTensionRange" oninput="updateFloatInput(this.value, 'innerSurfTension', this.id);">
+								</div>
+								<div class="col-md-1 text-left">
+									<input size="4" type="text" id="innerSurfTension" name="innerSurfTension" value="1" oninput="updateFloatSlider('innerSurfTensionRange', this.id)" onchange="floatSliderChange('innerSurfTensionRange', this.id, 100, 300)"> <!--TODO: add in range-->
+								</div>
+								<div class="col-md-1 text-center">
+									<div class="tt_container"><i class="fa fa-question-circle fa-lg"></i><span class="tt_info">Interfacial surface tension betweeen the inner aqueous and oil phases in mN/m.</span></div>
+								</div>
+							</div>
+							<!--7th row TODO: UPDATE ranges to be correct with dataset -->
+							<div class="row slider-row">
+								<!--2nd column-->
+								<div class="col-md-5 text-left">
+									<p class="field-tip">Outer aqueous phase dynamic viscosity (mPa s)<!--<span class="tip-content">Channel depth divided by orifice width</span>--></p>
+								</div>
+								<div class="col-md-5 text-left">
+									<input type="range" min="1.4" max="939" value="1.4" class="slider-activated" id="outerAqViscRange" oninput="updateFloatInput(this.value, 'outerAqVisc', this.id);">
+								</div>
+								<div class="col-md-1 text-left">
+									<input size="4" type="text" id="outerAqVisc" name="outerAqVisc" value="0.014" oninput="updateFloatSlider('outerAqViscRange', this.id)" onchange="floatSliderChange('outerAqViscRange', this.id, 1.4, 939)">
+								</div>
+								<div class="col-md-1 text-center">
+									<div class="tt_container"><i class="fa fa-question-circle fa-lg"></i><span class="tt_info">Dynamic viscosity of the outer dispersed phase (sheath fluid) in Pa s.</span></div>
+								</div>
+							</div>
+                            <!--10th row-->
+							<div class="row slider-row">
+								<!--1st column-->
+								<div class="col-md-5 text-left">
+									<p class="field-tip">oil / outer aqueous interfacial surface tension (mN/m) <!--<span class="tip-content">unit in &#181;m</span>--></p>
+								</div>
+								<div class="col-md-5 text-left">
+									<input type="range" min="100" max="300" value="100" class="slider-activated" id="outerSurfTensionRange" oninput="updateFloatInput(this.value, 'outerSurfTension', this.id);">
+								</div>
+								<div class="col-md-1 text-left">
+									<input size="4" type="text" id="outerSurfTension" name="outerSurfTension" value="1" oninput="updateFloatSlider('outerSurfTensionRange', this.id)" onchange="floatSliderChange('outerSurfTensionRange', this.id, 100, 300)"> <!--TODO: add in range-->
+								</div>
+								<div class="col-md-1 text-center">
+									<div class="tt_container"><i class="fa fa-question-circle fa-lg"></i><span class="tt_info">Interfacial surface tension betweeen the oil and outer aqueous phases in mN/m.</span></div>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-md-12">
+									<h6 class="vspace-subtitle">.: Device Selection :.</h6>
+								</div>
+							</div>
+							<div class="row content-spacer">
+								<!--1st column-->
+								<div class="col-md-1 text-left">
+									<b>Enabled?</b>
+								</div>
+							</div>
+							<!--nth row-->
+							<div class="row slider-one-col">
+								<!--2nd column-->
+								<div class="col-md-5 text-left">
+									<p class="field-tip">Double emulsion generator device<!--<span class="tip-content">Channel depth divided by orifice width</span>--></p>
+								</div>
+								<div class="col-md-5 text-left">
+									<select class="cmbox" name="device" id="deviceCombo" enabled>
+										<option value="1">15 &mu;m orifice generator</option>
+                                        <option value="2">22.5 &mu;m orifice generator</option>
+                                        <option value="3">30 &mu;m orifice generator</option>
+									</select>
+								</div>
+								<div class="col-md-1 text-center"></div>
+								<div class="col-md-1 text-center">
+									<div class="tt_container"><i class="fa fa-question-circle fa-lg"></i><span class="tt_info">Generator design to use for design automation.</span></div>
 								</div>
 							</div>
 							<div class="row">
@@ -536,7 +707,7 @@
 	//NN optimizer submission
 	
 	var myFullpage = new fullpage('#fullpage', {
-		anchors: ['home', 'designAutomation', 'performancePrediction'],
+		anchors: ['home', 'designAutomation', 'designAutomationDE', 'performancePrediction'],
 		navigation:true,
 		{#scrollOverflow: false#}
         responsiveHeight: 1000
