--- a/app/templates/index_3.html
+++ b/app/templates/index_3.html
@@ -333,7 +333,7 @@
 	<div class="row">
 		<div class="col-md-1"></div>
 		<div class="col-md-10">
-			<form action="{{ url_for('nn.backward_3DE') }}" method="post" enctype="multipart/form-data">
+			<form action="{{ url_for('nn.backward_3_de') }}" method="post" enctype="multipart/form-data">
 				<div class="form-group">
 					<div class="slider-container">
 						<div class="container">
